@@ -1,3 +1,10 @@
+2019-06-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* include/pstl/pstl_config.h (_PSTL_PRAGMA_SIMD_SCAN,
+	_PSTL_PRAGMA_SIMD_INCLUSIVE_SCAN, _PSTL_PRAGMA_SIMD_EXCLUSIVE_SCAN):
+	Define to OpenMP 5.0 pragmas even for GCC 10.0+.
+	(_PSTL_UDS_PRESENT): Define to 1 for GCC 10.0+.
+
 2019-06-24  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/std/numeric (midpoint(T, T)): Change implementation for
